device-login/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: device-login
  namespace: device-login
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: device-login.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: device-login
                port:
                  number: 80
